# ItineraAI

./: .gitignore  README.md  TabNet_100,000.ipynb  api.py  models  netlify.toml  package-lock.json  package.json  requirements.txt
app/: globals.css  layout.tsx  page.tsx
data/: TCA_iar_Agencias.json  TCA_iar_Paises_origen.json  TCA_iar_Segmentos_Comp.json  TCA_iar_Tipos_Habitaciones.json  TCA_iar_canales.json  TCA_iar_estatus_reservaciones.json  TCA_iar_hotedo.json
models/: Equipo_5_Limpieza_Final_Datos_TCA.ipynb  TabNet_100,000.ipynb
pipeline/: .gitignore  README.md  pyproject.toml
pipeline/conf/base/: catalog.yml  parameters.yml
pipeline/data/06_models/cluster_model.pkl/2025-05-30T04.58.05.450Z/: cluster_model.pkl
pipeline/data/06_models/cluster_model.pkl/2025-06-01T23.56.16.161Z/: cluster_model.pkl
pipeline/data/06_models/cluster_model.pkl/2025-06-02T00.28.56.084Z/: cluster_model.pkl
pipeline/data/08_reporting/: segment_profile.csv
pipeline/src/reservations_pipeline/: __init__.py  __main__.py  pipeline_registry.py  settings.py
pipeline/src/reservations_pipeline/pipelines/clustering/: nodes.py  pipeline.py
styles/: globals.css
